--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ footer>h2 {
   justify-content: center;
   align-items: center;
   margin: 40px 0;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 .btn-item {
   margin-left: 15px;
